<resources>
    <string name="app_name">NUMAD22Sp_FinalProject_FeedMe</string>
    <string name="yelp">Yelp</string>
    <string name="cuisine">Cuisine</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="currency_4">$$$$</string>
    <string name="currency_3">$$$</string>
    <string name="currency_2">$$</string>
    <string name="currency_1">$</string>
    <string name="title_activity_main_menu">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>